@@ -7,6 +7,8 @@ Socket Sentry changelog
 * Issue #1: CHANGED applet to prompt the user to select a device if the
   default ("any") pseudo-device is not available.
 * Issue #2: FIXED applet failing with an error if IPv6 is disabled.
+* Issue #6: FIXED building with LDFLAGS="-Wl,--as-needed" by moving
+  Qt/libpcap linkages from executables to libraries.
 
 0.9.1 - 28-Mar-2010
 ===================
